// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[archer] 1`] = `
{
  "accRating": 15.225,
  "accuracyPct": 8.225,
  "allStatTotal": 263,
  "atk": 63,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 8.6,
  "critMult": 1.5550299513149461,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 148,
  "evaRating": 19.200000000000003,
  "evasionPct": 19.200000000000003,
  "extraAttackChancePct": 68.3,
  "healMult": 1.1500000000000001,
  "hp": 640,
  "intStat": 15,
  "lukStat": 55,
  "magicAtk": 8,
  "magicDef": 14,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 136.6,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[lowbie] 1`] = `
{
  "accRating": 8.775,
  "accuracyPct": 1.775,
  "allStatTotal": 100,
  "atk": 11,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.4604255649461715,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 15,
  "evaRating": 2.7,
  "evasionPct": 2.7,
  "extraAttackChancePct": 7.125,
  "healMult": 1.1500000000000001,
  "hp": 190,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 8,
  "magicDef": 14,
  "maxHp": 190,
  "maxMp": 92,
  "minDamage": 3,
  "mp": 92,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 14.25,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[mage] 1`] = `
{
  "accRating": 11.684999999999999,
  "accuracyPct": 4.685,
  "allStatTotal": 253,
  "atk": 9,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.45280302180028,
  "critResistPct": 4.5,
  "def": 6,
  "dexStat": 15,
  "evaRating": 2.7,
  "evasionPct": 2.7,
  "extraAttackChancePct": 7.125,
  "healMult": 1.33,
  "hp": 640,
  "intStat": 148,
  "lukStat": 15,
  "magicAtk": 47,
  "magicDef": 43,
  "maxHp": 640,
  "maxMp": 501,
  "minDamage": 9,
  "mp": 501,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 14.25,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[ninja] 1`] = `
{
  "accRating": 10.825,
  "accuracyPct": 3.8249999999999997,
  "allStatTotal": 255,
  "atk": 29,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 16.2,
  "critMult": 1.7329671756295133,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 60,
  "evaRating": 16.8,
  "evasionPct": 16.8,
  "extraAttackChancePct": 28.5,
  "healMult": 1.1500000000000001,
  "hp": 640,
  "intStat": 15,
  "lukStat": 135,
  "magicAtk": 8,
  "magicDef": 14,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 57,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[tank] 1`] = `
{
  "accRating": 9.175,
  "accuracyPct": 2.175,
  "allStatTotal": 275,
  "atk": 38,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.4755190439471157,
  "critResistPct": 1.5,
  "def": 30,
  "dexStat": 15,
  "evaRating": 2.7,
  "evasionPct": 2.7,
  "extraAttackChancePct": 4.625,
  "healMult": 1.7700000000000002,
  "hp": 835,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 8,
  "magicDef": 14,
  "maxHp": 835,
  "maxMp": 227,
  "minDamage": 10,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 9.25,
  "vitStat": 170,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[warrior] 1`] = `
{
  "accRating": 11.235,
  "accuracyPct": 4.234999999999999,
  "allStatTotal": 263,
  "atk": 55,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.5501420281376743,
  "critResistPct": 1.5,
  "def": 18,
  "dexStat": 15,
  "evaRating": 2.7,
  "evasionPct": 2.7,
  "extraAttackChancePct": 1.625,
  "healMult": 1.31,
  "hp": 720,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 8,
  "magicDef": 14,
  "maxHp": 720,
  "maxMp": 227,
  "minDamage": 17,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 3.25,
  "vitStat": 55,
}
`;

exports[`골든: resolveBattle PvE 지문 (엔진 가드) > PvE 지문 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "warrior_vs_들개",
    "logSha": "a4b61cad67c59a54595bfd0d362d12ae071a1271",
    "outcome": "win",
    "playerHp": 720,
    "playerMp": 227,
    "turns": 7,
  },
  {
    "enemyHp": 0,
    "label": "warrior_vs_골렘",
    "logSha": "7a39c83de6ff61d3344cc0e519db7938fcbedd39",
    "outcome": "win",
    "playerHp": 720,
    "playerMp": 227,
    "turns": 15,
  },
  {
    "enemyHp": 0,
    "label": "ninja_crit_vs_늑대",
    "logSha": "42982899b1e70e9254ce0262b02b8570c45552f0",
    "outcome": "win",
    "playerHp": 628,
    "playerMp": 227,
    "turns": 40,
  },
  {
    "enemyHp": 0,
    "label": "archer_pen_vs_골렘",
    "logSha": "4a78c78d9a41e8e3bf51349222f6ca6a4679816e",
    "outcome": "win",
    "playerHp": 640,
    "playerMp": 227,
    "turns": 15,
  },
  {
    "enemyHp": 0,
    "label": "magic_vs_약탈자",
    "logSha": "e5d72d0394cf82de1e61abe59cdc08f0384caed7",
    "outcome": "win",
    "playerHp": 640,
    "playerMp": 501,
    "turns": 35,
  },
  {
    "enemyHp": 0,
    "label": "counter_tank_vs_들소",
    "logSha": "36538f99814fe4d9c24efdfb6efe8ecda31722c1",
    "outcome": "win",
    "playerHp": 820,
    "playerMp": 227,
    "turns": 47,
  },
  {
    "enemyHp": 0,
    "label": "heal_vs_들소_boss",
    "logSha": "220c96404ddde447cd28a43b2382b209eb9e064e",
    "outcome": "win",
    "playerHp": 835,
    "playerMp": 227,
    "turns": 57,
  },
  {
    "enemyHp": 0,
    "label": "mage_skills_vs_골렘",
    "logSha": "dc48064155b76e6fd9029c5ae931186b1b6db26f",
    "outcome": "win",
    "playerHp": 640,
    "playerMp": 381,
    "turns": 14,
  },
  {
    "enemyHp": 0,
    "label": "lowbie_vs_들개",
    "logSha": "769b5463a69dcbaf09c1271cc38edc60125470b4",
    "outcome": "win",
    "playerHp": 190,
    "playerMp": 92,
    "turns": 18,
  },
]
`;

exports[`골든: resolveBattlePvP 지문 (PvP 엔진 가드) > PvP 지문 매트릭스 1`] = `
[
  {
    "label": "warrior_vs_mage",
    "logSha": "af27bfeca3d912ad239ad43750b6d50b0a6dc2bd",
    "outcome": "p1_win",
    "turns": 59,
  },
  {
    "label": "archer_vs_ninja",
    "logSha": "b4cc3906c674ad4acbfbc37495f8a09ff83ea631",
    "outcome": "p1_win",
    "turns": 43,
  },
  {
    "label": "tank_vs_warrior",
    "logSha": "e9e247e6272363e3545a8877821f7506a14cb953",
    "outcome": "p2_win",
    "turns": 143,
  },
]
`;

exports[`골든: 적 페이즈 메커닉 커버리지 (리팩터 가드) > 적 페이즈 메커닉 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "enemy_dot_tick",
    "logSha": "a59f805ccddb15aef45b316111a75ee33a9430b1",
    "outcome": "win",
    "playerHp": 717,
    "playerMp": 227,
    "turns": 16,
  },
  {
    "enemyHp": 0,
    "label": "chill_enemy",
    "logSha": "37c26fa55d6687b0737806a698d94caa8227c4ce",
    "outcome": "win",
    "playerHp": 807,
    "playerMp": 227,
    "turns": 29,
  },
  {
    "enemyHp": 0,
    "label": "thorns_reflect",
    "logSha": "81378dba6717b481de1ba18f330ae90057ad796e",
    "outcome": "win",
    "playerHp": 835,
    "playerMp": 227,
    "turns": 29,
  },
  {
    "enemyHp": 0,
    "label": "evade_reflect",
    "logSha": "edc2a97e03d05f7501b1f16b56ebd1c493dba3d1",
    "outcome": "win",
    "playerHp": 610,
    "playerMp": 227,
    "turns": 80,
  },
  {
    "enemyHp": 0,
    "label": "enrage_enemy",
    "logSha": "d93e1870a46bd6f3ed48a3eee939b3dc3cfd93c4",
    "outcome": "win",
    "playerHp": 720,
    "playerMp": 227,
    "turns": 19,
  },
  {
    "enemyHp": 0,
    "label": "brace_enemy",
    "logSha": "3db4a1a47ab62ff868251f21ecd4cf9068282283",
    "outcome": "win",
    "playerHp": 714,
    "playerMp": 227,
    "turns": 19,
  },
  {
    "enemyHp": 0,
    "label": "heavyblow_enemy",
    "logSha": "ffd1436e2bff9fa926a91da676c2a01c71dff5fe",
    "outcome": "win",
    "playerHp": 820,
    "playerMp": 227,
    "turns": 55,
  },
]
`;
